--- a/QuantumultX/Rewrite/AdvertisingLite.conf
+++ b/QuantumultX/Rewrite/AdvertisingLite.conf
@@ -1,6 +1,6 @@
 # NAME: AdvertisingLite
-# AUTHOR: blackmatrix7
-# REPO: https://github.com/blackmatrix7/ios_rule_script
+# AUTHOR: Roy
+# REPO: https://github.com/iRoySwift
 # UPDATED: 2024-06-02 02:14:26
 # HOST:2
 # HOST-KEYWORD:211
